@@ -18,6 +18,7 @@ Updated by: FPtje Falco
 [ADD] DarkRP now saves the costs of guns and other global ints
 [ADD] Ability to knock on doors you don't own(left/right mouse with the keys weapon)
 [ADD] Some citizen models(Now not every citizen has the same model)
+[ADD] Teamban and teamunban (chat = /teamban, console = rp_teamban): Ban/unban a player from a certain team. Use: /teamban <player> <team> or rp_teamban <player> <team>
 [CHANGE] All door controls are now done though reload with the Keys weapon.
 [CHANGE] Descriptions in the change job VGUI(thanks james hutchins)
 [CHANGE] The way prop protection works for admins
